; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_LUTA2B_Dup.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_LUTA2B_Dup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cms_typehandler_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, %struct._cms_typehandler_struct*, i8*, %struct._cms_typehandler_struct*)* @Type_LUTA2B_Dup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Type_LUTA2B_Dup(i32 %0, %struct._cms_typehandler_struct* %1, i8* %2, %struct._cms_typehandler_struct* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct._cms_typehandler_struct*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct._cms_typehandler_struct*, align 8
  store i32 %0, i32* %5, align 4
  store %struct._cms_typehandler_struct* %1, %struct._cms_typehandler_struct** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct._cms_typehandler_struct* %3, %struct._cms_typehandler_struct** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = bitcast i8* %10 to i32*
  %12 = call i64 @cmsPipelineDup(i32 %9, i32* %11)
  %13 = inttoptr i64 %12 to i8*
  ret i8* %13
}

declare dso_local i64 @cmsPipelineDup(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
